syntax = "proto3";

package task;

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (Task);
  rpc GetTask (GetTaskRequest) returns (Task);
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse);
  rpc UpdateTask (UpdateTaskRequest) returns (Task);
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
}

message Task {
  int64 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
}

message GetTaskRequest {
  int64 id = 1;
}

message ListTasksRequest {}

message ListTasksResponse {
  repeated Task tasks = 1;
}

message UpdateTaskRequest {
  int64 id = 1;
  optional string title = 2;
  optional string description = 3;
  optional bool completed = 4;
}

message DeleteTaskRequest {
  int64 id = 1;
}

message DeleteTaskResponse {
  bool success = 1;
}
